--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@react-three/drei": "10.7.6",
+    "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "9.3.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "three": "0.180.0"
+    "three": "^0.182.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -25,6 +25,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
